[package]
name = "rust_zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Chinwuba Ezekwem <stephen.ezekwem@ezektec.com>"]
# # # edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4"
reqwest = "0.11.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

